# proxy

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
client_moc/: CMakeLists.txt  proxyclient.h
client_moc/src/: client_main.cpp  proxyclient.cpp
deploy/: build_windows.bat
deploy/installer/config/: windows.xml
proxyserver/: CMakeLists.txt  configmanager.cpp  configmanager.h  httpapi.h  openapi_en.yaml  openapi_ru.yaml  proxyserver.cpp  proxyserver.h  proxyserver.rc  proxyservice.h  resources.qrc  trayicon.h  xraycontroller.cpp
proxyserver/src/: configmanager.cpp  configmanager.h  httpapi.cpp  httpapi.h  iproxyservice.h  logger.cpp  logger.h  main.cpp  proxyserver.cpp  proxyserver.h  proxyservice.cpp  proxyservice.h  trayicon.cpp  trayicon.h  xraycontroller.cpp  xraycontroller.h
src/: main.cpp  proxyserver.cpp  proxyserver.h
